[package]
name = "tange-collection"
version = "0.1.2"
authors = ["Andrew Stanton <refefer@gmail.com>"]
description = "Dataflow computation"
license = "Apache-2.0/MIT"
repository = "https://github.com/Refefer/tange/tree/master/tange-collection"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "dataflow", "performance"]
categories = ["concurrency", "algorithms"]

[dependencies]
tange = { path = "../tange-core" }
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4"] }
snap = "0.2.5"

[lib]
name = "tange_collection"
path = "src/lib.rs"
